# mars-lang

./: .gitignore  1.rs  Cargo.toml  LICENSE  README.md  build.rs  spec.txt
bench/: b1.mars  b1.out  b2.mars  b2.out  b3.mars  b3.out
benchmarks/: hello.mars  task1.mars  task2.mars  task3.mars  task4.mars
compiler/marsc/: Cargo.toml  build.rs  main.mars  pilot.mars  test.ms
compiler/marsc/src/: main.rs
compiler/marsc/src/clib/: io.c
compiler/marsc_ast/: Cargo.toml
compiler/marsc_ast/src/: expr.rs  lib.rs  mars_grammar.pest  notes.txt  stmt.rs
compiler/marsc_code_span/: Cargo.toml
compiler/marsc_code_span/src/: code_span.rs  lib.rs  source_code.rs
compiler/marsc_codegen/: Cargo.toml
compiler/marsc_codegen/src/: codegen.rs  codegen_backend.rs  external.rs  lib.rs
compiler/marsc_codegen/src/codegen/: arrays.rs  codegen.rs  flow.rs  functions.rs  logical.rs  math.rs  mod.rs  references.rs  structs.rs  sys.rs  vec.rs
compiler/marsc_context/: Cargo.toml
compiler/marsc_context/src/: context.rs
compiler/marsc_core/: Cargo.toml
compiler/marsc_core/src/dep_graph/: mod.rs
compiler/marsc_data_structures/: Cargo.toml
compiler/marsc_data_structures/src/: lib.rs  steal.rs
compiler/marsc_driver/: Cargo.toml
compiler/marsc_driver/src/: args.rs  config.rs  lib.rs  log.rs
compiler/marsc_error/: Cargo.toml
compiler/marsc_error/src/: lib.rs
compiler/marsc_hir/: Cargo.toml
compiler/marsc_hir/src/: ast.rs  ast_simplifier.rs  lib.rs  mars_grammar.pest  parser.rs  simplifier.rs
compiler/marsc_hir/src/stages/: arr_expander.rs  mod.rs  parser.rs  simplifier.rs
compiler/marsc_hir/tests/: ast_build_test_0.rs  parser_tests.rs
compiler/marsc_interface/: Cargo.toml
compiler/marsc_interface/src/: interface.rs  lib.rs  linker.rs  passes.rs  queries.rs
compiler/marsc_lexer/: Cargo.toml
compiler/marsc_lexer/src/: lexer.rs  token.rs
compiler/marsc_lir/: Cargo.toml
compiler/marsc_lir/src/: codegen.rs  lib.rs
compiler/marsc_mir/: Cargo.toml
compiler/marsc_mir/src/: ast_simplifier.rs  context.rs  lib.rs  mir.rs  mir_instr.rs  provider.rs
compiler/marsc_mir/src/stages/: check_after_ret.rs  check_main.rs  check_types.rs  init_new_block_var.rs  mod.rs  sys_funs.rs  type_checker.rs
compiler/marsc_mir/src/stages/s1/: check_after_ret.rs  check_main.rs  check_types.rs  mod.rs  sys_funs.rs
compiler/marsc_mir/src/stages/s2/: check_const_types.rs  mod.rs  new_block_var_decl.rs
compiler/marsc_mir/src/types/: context.rs
compiler/marsc_parse/: Cargo.toml
compiler/marsc_proc_macro/: Cargo.toml
compiler/marsc_proc_macro/src/: lib.rs
compiler/marsc_query_system/: Cargo.toml
compiler/marsc_query_system/src/: context.rs  key.rs  lib.rs  provider.rs  query.rs
compiler/marsc_resolve/: Cargo.toml
compiler/marsc_resolve/src/: lib.rs
compiler/marsc_session/: Cargo.toml
compiler/marsc_session/src/: session.rs
compiler/marsc_span/: Cargo.toml
compiler/marsc_span/src/: lib.rs
examples/: b1.mars  b2.mars  test.cpp  test.ir  test.ll  test.mars  test.rs
src/: main.rs
std/marsio/: Cargo.toml
std/marsio/src/: lib.rs
std/marsvector/: Cargo.toml
std/marsvector/src/: lib.rs
