[package]
name = "marsc"
version = "0.1.0"
edition = "2021"
license = "BSDv3"
description = """
Mars programming language compiler
"""

[dependencies]
marsc_hir = { path = "../marsc_hir" }
marsc_query_system = { path = "../marsc_query_system" }
marsc_context = { path = "../marsc_context" }
marsc_proc_macro = { path = "../marsc_proc_macro" }
marsc_session = { path = "../marsc_session" }
marsc_interface = { path = "../marsc_interface" }
anyhow = "1.0.95"