[package]
name = "marsc"
version = "0.1.0"
edition = "2021"
license = "BSDv3"
description = """
Mars programming language compiler
"""

# [lib]
# name = "entry"
# path = "src/lib.rs"

[[bin]]
name = "mars"
path = "src/main.rs"

[dependencies]
marsc_hir = { path = "../marsc_hir" }
marsc_mir = { path = "../marsc_mir" }
marsc_error = { path = "../marsc_error" }
clap = { version = "4.5.26", features = ["derive"] }