[package]
name = "marsc"
version = "0.1.0"
edition = "2021"
license = "BSDv3"
description = """
Mars programming language compiler
"""

[[bin]]
name = "mars"
path = "src/main.rs"

[dependencies]
marsc_hir = { path = "../marsc_hir" }
marsc_mir = { path = "../marsc_mir" }
marsc_lir = { path = "../marsc_lir" }
marsc_codegen = { path = "../marsc_codegen" }
marsc_error = { path = "../marsc_error" }
clap = { version = "4.5.26", features = ["derive"] }