[package]
name = "marsc_driver"
version = "0.1.0"
edition = "2021"
license = "BSDv3"
description = """
Mars programming language driver
"""

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
marsc_interface = { path = "../marsc_interface" }
marsc_proc_macro = { path = "../marsc_proc_macro"}
marsc_codegen = { path = "../marsc_codegen" }
marsc_hir = { path = "../marsc_hir" }
marsc_mir = { path = "../marsc_mir" }
anyhow = "1.0.95"
indicatif = "0.17.9"
console = "0.15.10"
