[package]
name = "marsc_interface"
version = "0.1.0"
edition = "2021"
license = "BSDv3"
description = """
Mars programming language interface
"""

[lib]
path = "src/lib.rs"

[dependencies]
marsc_core = { path = "../marsc_core" }
marsc_data_structures = { path = "../marsc_data_structures" }
marsc_hir = { path = "../marsc_hir" }
marsc_context = { path = "../marsc_context" }
marsc_span = { path = "../marsc_span" }
marsc_session = { path = "../marsc_session" }
anyhow = "1.0.95"
