[package]
name = "marsc_interface"
version = "0.1.0"
edition = "2021"
license = "BSDv3"
description = """
Mars programming language interface
"""

[lib]
path = "src/lib.rs"

[dependencies]
marsc_hir = { path = "../marsc_hir" }
marsc_mir = { path = "../marsc_mir" }
marsc_session = { path = "../marsc_session" }
