[package]
name = "marsc_lir"
version = "0.1.0"
edition = "2021"
license = "BSDv3"
description = """
Mars programming language compiler lir module
"""

[lib]
name = "lir"
path = "src/lib.rs"

[dependencies]
marsc_mir = { path = "../marsc_mir" }
# inkwell = { version = "0.5.0", features = ["llvm18-0"] }