[package]
name = "marsc_resolve"
version = "0.1.0"
edition = "2021"

[dependencies]
marsc_context = { path = "../marsc_context" }
marsc_hir = { path = "../marsc_hir" }
marsc_proc_macro = { path = "../marsc_proc_macro" }
marsc_query_system = { path = "../marsc_query_system" }
marsc_mir = { path = "../marsc_mir" }